<resources>
    <string name="app_name">Chef\'s Choice</string>
    <string name="register_product">Register Product</string>
    <string name="display_products">Display Products</string>
    <string name="availability">Availability</string>
    <string name="edit_products">Edit Products</string>
    <string name="search">Search</string>
    <string name="recipes">Recipes</string>
    <string name="name_of_the_product">Name of the Product</string>
    <string name="weight">Weight (in grams)</string>
    <string name="price">Price (in pounds)</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="add_to_kitchen">Add to Kitchen</string>
    <string name="display_kitchen">Display Kitchen</string>
    <string name="edit_product">Edit Product</string>
    <string name="search_product">Search Product</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_results">No recipes available containing these ingredients, try different ingredients</string>
    <string name="search_recipe">Find recipe</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_search_term">Please select a search term</string>
    <string name="loading">Loading...</string>
    <string name="edit_details">Edit details</string>
    <string name="select_a_recipe">Select a recipe</string>
    <string name="select_ingredients_to_find">Select ingredients to find</string>
</resources>
