<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/register_product"
            android:theme="@style/button" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/display_products"
            android:theme="@style/button" />

        <Button
            android:id="@+id/btnAvailability"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/availability"
            android:theme="@style/button" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/edit_products"
            android:theme="@style/button" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:theme="@style/button" />

        <Button
            android:id="@+id/btnRecipes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/recipes"
            android:theme="@style/button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

